--- a/src/Image/Image.css
+++ b/src/Image/Image.css
@@ -1,5 +1,11 @@
 .responsive {
+  width: 100%;
   max-width: 100%;
+  display: block;
+}
+
+.responsiveVertical {
+  height: 100%;
   max-height: 100%;
   display: block;
 }
